REGRESSION (r125710): accessibility/accessibility-node-reparent.html, accessibility/accessibility-node-memory-management.html failing on GTK Linux https://bugs.webkit.org/show_bug.cgi?id=94200

Reviewed by Chris Fleizach.

Tools:

Adds reference counting for AtkObjects referenced by
AccessibilityUIElementGtk. This prevents bogus results and
assertion failures on AccessibilityUIElements whose underlying
object has been deleted (as opposed to just made defunct).

This fixes two tests that were previously failing because of this bug.

* DumpRenderTree/gtk/AccessibilityUIElementGtk.cpp:
(AccessibilityUIElement::AccessibilityUIElement):
(AccessibilityUIElement::~AccessibilityUIElement):

LayoutTests:

This patch fixes two tests and removes them from gtk expectations.

* platform/gtk/TestExpectations:


Canonical link: https://commits.webkit.org/112541@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126309 268f45cc-cd09-0410-ab3c-d52691b4dbfc